--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "scripts": {
         "build": "tsc",
-        "dev": "ts-node src/index.ts"
+        "dev": "ts-node src/index.ts",
+        "test": "jest --runInBand"
     },
     "author": "",
     "license": "ISC",
@@ -24,6 +25,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "otplib": "^12.0.1"
     }
 }
