feat: add OTP generation and validation controller with tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "tsc",
         "dev": "ts-node src/index.ts",
-        "test": "jest --runInBand"
+        "test": "jest --runInBand --silent"
     },
     "author": "",
     "license": "ISC",
