--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    ports:
+      - "3000:3000"
     volumes:
       - .:/app 
     command: sh -c "npm install && npm run dev"
