--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,8 @@ services:
     volumes:
       - .:/app 
     command: sh -c "npm install && npm run dev"
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
