--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^5.1.0",
-        "otplib": "^12.0.1"
+        "otplib": "^12.0.1",
+        "redis": "^5.6.0"
     }
 }
