--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
         "@types/nock": "^11.1.0",
         "@types/node": "^20.17.7",
         "@types/sinon": "^17.0.3",
+        "@types/swagger-ui-express": "^4.1.8",
+        "@types/yamljs": "^0.2.34",
         "jest": "^29.7.0",
         "nock": "^13.5.6",
         "sinon": "^18.0.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
@@ -26,7 +30,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^5.1.0",
-        "otplib": "^12.0.1",
-        "redis": "^5.6.0"
+        "redis": "^5.6.0",
+        "yamljs": "^0.3.0"
     }
 }
